# bazel-faq

./: .bazelrc  .prettierignore  .prettierrc.js  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  jest.config.js  package.json  tsconfig.base.json
.github/workflows/: main.yaml
tools/: BUILD.bazel  devserver.go  index.bzl  jest-reporter.js
tools/serve/: BUILD.bazel  serve.go
