load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "nogo")

package(default_visibility = ["//visibility:public"])

nogo(
    name = "vet",
    vet = True,
    visibility = ["//visibility:public"],
)

# Ignore the node_modules dir
# gazelle:exclude node_modules
# Prefer generated BUILD files to be called BUILD over BUILD.bazel
# gazelle:build_file_name BUILD,BUILD.bazel
# gazelle:prefix github.com/lukasholzer/bazel-faq
gazelle(name = "gazelle")

exports_files([
    "tsconfig.base.json",
    "jest.config.js",
    ".prettierrc.js",
    ".prettierignore",
])

alias(
    name = "serve",
    actual = "//packages/app:serve",
)
